--- a/public/download.html
+++ b/public/download.html
@@ -25,12 +25,11 @@
 
 <div class="crossnote markdown-preview  ">
     <h3 id="Clash全平台客户端备份">Clash全平台客户端备份</h3>
-    <p><a href="https://t.me/feiyangofficalchannel/624">点击查看</a></p>
+    <p><a href="https://t.me/yifenruanjian">点击查看</a></p>
     <h3 id="代理客户端">代理客户端 </h3>
     <h5 id="tv">Android TV（包括国行索尼电视、FireTv系列）</h5>
     <ul>
         <li><a href="https://github.com/SagerNet/sing-box/releases/latest">Sing-Box索尼电视兼容版</a>(选择SFA-版本号-universal.apk)</li>
-        <li><a href="https://t.me/feiyangdigital/529168">Clash索尼电视兼容版</a></li>
         <li><a href="https://github.com/2dust/v2rayNG/releases/download/1.7.16/v2rayNG_1.7.16.apk">v2rayNG索尼电视兼容版</a></li>
         <li><a href="https://github.com/shadowsocks/shadowsocks-android/releases">Shadowsocks 影梭</a>(选择shadowsocks-tv--universal)</li>
     </ul>
@@ -59,7 +58,6 @@
         <li><a href="https://apps.apple.com/us/app/trojanx/id1523269113">TrojanX</a> $1.99</li>
         <li><a href="https://apps.apple.com/us/app/id1545555197">OneClick</a> Free</li>
         <li><a href="https://apps.apple.com/app/spectre-vpn/id1508712998">Spectre VPN</a> Free</li>
-        <li><a href="https://fk.myue.club">代购/人民币购买地址</a></li>
     </ul>
     <h5 id="tvos-客户端">tvOS 客户端 </h5>
     <ul>
@@ -135,8 +133,6 @@
         <li><a href="https://github.com/shadowsocks/openwrt-shadowsocks">OpenWRT-Shadowsocks</a></li>
         <li><a href="https://www.right.com.cn/forum/thread-161324-1-1.html">Padavan</a></li>
     </ul>
-    <h3 id="telegram-客户端-proxy-代理设置">Telegram 客户端 Proxy 代理设置 </h3>
-    <p><a href="https://cdn.jsdelivr.net/gh/youshandefeiyang/webcdn@6.4/tg.png">点击查看</a></p>
     <h3 id="耗电流量">耗电/流量 </h3>
     <p><em>为什么使用了代理应用后在电量统计中显示耗电很多？</em><br><br>
         这是移动操作系统的一个特殊机制，Surge iOS、Quantumult X、Shadowrocket、Choc 等等所有的 SS/SSR/V2Ray/Trojan 客户端开启后会接管全局的（几乎）所有通信，所以所有的网络方面电量消耗都会被算在代理应用头上，实际使用中不会感到代理应用对电量有明显影响，「设置-电池」中看到它的电池用量，绝大部分都是网络所消耗的电量，并不是代理应用消耗的电量，代理应用就是背锅侠。<br><br>
@@ -146,7 +142,7 @@
 </div>
 
 
-<h1 style="text-align: center">⚠️本站资源引用自TG-CMliussss</br></br></br></h1>
+<h1 style="text-align: center">⚠️TG-CMliussss+肥羊后端</br></br></br></h1>
 
 
 
